fixed zoom nonsense on mobile devices (hopefully)

--- a/gwichin-dictionary/style.css
+++ b/gwichin-dictionary/style.css
@@ -62,7 +62,7 @@ body {
     }
     .input {
         width: 50%; 
-        font-size: 14px; 
+        font-size: 16px; 
         height: 40px; 
     }
 }
@@ -73,7 +73,7 @@ body {
         padding: 15px; 
     }
     .input {
-        font-size: 14px; 
+        font-size: 16px; 
     }
     .input {
         width: 60%; 
